--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HondaBoard</title>
 
 </head>
+
 <body>
-    <a href="/login">ログイン</a>
+    <a href="/userpage">ログイン</a>
     <a href="/register">新規登録はこちら</a>
 </body>
+
 </html>
